<resources>
    <string name="app_name">Numbuddy</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="new_here_create_an_account">New here? Create an account!</string>
    <string name="title_activity_loginactivity">loginactivity</string>
    <string name="are_you_sure_you_nwant_to_log_out">Are you sure you\nwant to log out?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logoutmascot">LogoutMascot</string>
    <string name="usrname">Karol Vincent</string>
    <string name="msg1">Good Day Karol!</string>
    <string name="msg2">Are you ready to learn?</string>
    <string name="msg3">You have earned 0 🌟 so far!</string>
    <string name="dailychallengemsg2">Earn 2 🌟 after completion</string>
    <string name="dailychallengemsg1">Daily Challenge</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="karol_vincent">Karol Vincent</string>
    <string name="your_progress">Your Progress</string>
    <string name="email">bebedorkarolvincent@gmail.com</string>
    <string name="start">START</string>
    <string name="lock">🔒</string>
    <string name="karoldesc">An aspiring developer with a keen interest in learning and improving skills in software development. Enjoys problem-solving and exploring new technologies to build useful and efficient solutions.</string>
    <string name="juliandesc">A committed and enthusiastic developer with a keen interest in coding, problem-solving, and software development. Always eager to learn and adapt to new technologies.</string>
    <string name="loginunderlined"><u>Login</u></string>
    <string name="signupunderlined"><u>Sign Up</u></string>

    <string name="level_1_title">Bigger or Smaller? 🤔🐊</string>
    <string name="level_1_desc">
    Hi there, Number Buddy! 👋 Let\'s compare numbers!\n\n
    Imagine a hungry Alligator 🐊! It always wants to munch the BIGGER number!
    \n\nWe use special signs:\n
    • The <font color='#FFFF00'><b>&gt;</b></font> sign opens its mouth wide to the bigger number! (Example: <font color='#FFFF00'><b>5 &gt; 3</b></font>)\n
    • The <font color='#FFFF00'><b>&lt;</b></font> sign points its small end to the smaller number! (Example: <font color='#FFFF00'><b>2 &lt; 4</b></font>)\n\n
    <font color='#FFFFFF'><b>Remember:</b></font> The Alligator <b>&gt;</b> always opens wide for the bigger meal! 😋\n\n
    Ready for the quiz? Let\'s go! 🚀
            </string>
                <string name="level_1_url_1">https://www.youtube.com/watch?v=Qn87cKHa7v4</string>
    <string name="level_1_url_2">https://www.youtube.com/watch?v=NpfEHf29g_w</string>

    <string name="level_2_title">Let\'s Add Things Up! ✨➕</string>
    <string name="level_2_desc">Woohoo! 🎉 Time to add! Addition is like putting groups of things together to see how many you have in total! 🤔 Think about it: If you have <b>2</b> yummy apples 🍎🍎 and you get <b>3</b> more apples 🍎🍎🍎, how many do you have now? Let\'s count... 1, 2, 3, 4, 5! ✨ So, <font color='#FF8C00'><b>2 + 3 = 5</b></font>! The plus sign <b>+</b> tells us to add them together. It\'s super fun! Ready to practice adding? Let\'s begin! 💪</string>
    <string name="level_2_url_1">https://www.youtube.com/watch?v=tVHOBVAFjUw</string>
    <string name="level_2_url_2">https://www.youtube.com/watch?v=gf97tXwTDe0</string>

    <string name="level_3_title">Take Away Time! 🎈➖</string>
    <string name="level_3_desc">Ready for some subtraction? ✨ Subtraction is like taking things away! 🤔 Imagine you have <b>5</b> colorful balloons 🎈🎈🎈🎈🎈, but <b>2</b> float away! Poof! 💨 How many are left? Let\'s see... 1, 2, 3! Only 3 balloons left! So, <font color='#4682B4'><b>5 - 2 = 3</b></font>! The minus sign <b>-</b> tells us to take away. Can you help figure out what\'s left in the quiz? You got this! 👍</string>
    <string name="level_3_url_1">https://www.youtube.com/watch?v=rqiu_xcvSk4</string>
    <string name="level_3_url_2">https://www.youtube.com/watch?v=mGy2_x_w6fk</string>

    <string name="level_4_title">Multiply and Divide!➗✖️</string>
    <string name="level_4_desc">Get ready for multiplying and dividing! 🤩\n\nMultiplying (<b>✖️</b>) is like super-fast adding! If you have <b>3</b> groups of <b>4</b> stars ✨✨✨✨, instead of 4+4+4, you can say <font color='#DAA520'><b>3 x 4 = 12</b></font> stars! Easy peasy! ⭐\n\nDividing (<b>➗</b>) is all about sharing fairly! If you have <b>10</b> cookies 🍪 and want to share them between <b>2</b> friends, each friend gets <font color='#DAA520'><b>10 ÷ 2 = 5</b></font> cookies! Everyone\'s happy! 😊\n\nLet\'s practice making groups and sharing in the quiz! You\'re doing great! 👍</string>
    <string name="level_4_url_1">https://www.youtube.com/watch?v=SRiYDszxruc</string>
    <string name="level_4_url_2">https://www.youtube.com/watch?v=pEbjmAsrOic</string>

    <string name="level_5_title">Place Value Power! 💪🔢</string>
    <string name="level_5_desc">Wow! Let\'s explore Place Value! 🏠 Every digit in a number has its own special spot, just like rooms in a house! 🤔 Look at the number <font color='#8A2BE2'><b>345</b></font>:\n\n• The <b>5</b> is in the ONES place (like the front door! 🚪) - it just means 5 ones.\n• The <b>4</b> is in the TENS place (like the living room!) - it really means <b>4 tens</b>, which is 40! ✨\n• The <b>3</b> is in the HUNDREDS place (like the attic!) - it really means <b>3 hundreds</b>, which is 300! 😲\n\nSo, <font color='#8A2BE2'><b>345</b></font> is 300 + 40 + 5! Knowing the place helps understand big numbers! Ready to try the quiz? Let\'s investigate! 🕵️‍♀️</string>
    <string name="level_5_url_1">https://www.youtube.com/watch?v=_dHu5TFxPtk</string>
    <string name="level_5_url_2">https://www.youtube.com/watch?v=pEbjmAsrOic</string>

    <string name="level_6_title">Big Number Challenge! 💯➕➖</string>
    <string name="level_6_desc">You\'re a Math Master! 🤩 Now let\'s work with BIGGER numbers, going up to the hundreds! Don\'t worry, adding (<b>+</b>) and subtracting (<b>-</b>) works the same way, just with more digits! 🤓\n\nThink about adding <font color='#32CD32'><b>123 + 215</b></font>. You add the ones (3+5=8), then the tens (2+1=3), then the hundreds (1+2=3) to get <font color='#32CD32'><b>338</b></font>! ✨\n\nFor subtraction like <font color='#32CD32'><b>456 - 123</b></font>, do the same: ones (6-3=3), tens (5-2=3), hundreds (4-1=3) gives <font color='#32CD32'><b>333</b></font>! Sometimes you might need to borrow, but you\'ve got this! 😉 Show those big numbers who\'s boss! 🔥</string>
    <string name="level_6_url_1">https://www.youtube.com/watch?v=_dHu5TFxPtk</string>
    <string name="level_6_url_2">https://www.youtube.com/watch?v=_dHu5TFxPtk</string>

</resources>