<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/whitetexture">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logoutmascot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:id="@+id/logoutmascot"
        android:contentDescription="@string/logoutmascot" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoutmascot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logoutprompt"
        android:text="@string/are_you_sure_you_nwant_to_log_out"
        android:textSize="35sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/primarygreen"/>
    <Button
        android:layout_width="277dp"
        android:layout_height="47dp"
        android:background="@color/primarygreen"
        app:layout_constraintTop_toBottomOf="@id/logoutprompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/logout"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/btnlogout"/>
    <Button
        android:id="@+id/btncancel"
        android:layout_width="277dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toBottomOf="@id/btnlogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/cancelbutton_border"
        android:text="@string/cancel"
        android:textColor="@color/primarygreen"
        android:textSize="20sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>