<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgteal">

    <ImageView
        android:id="@+id/loginbabaw"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:src="@drawable/loginbabaw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logo"
        android:scaleType="fitXY"
 />

    <ImageView
        android:translationY="-30dp"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbabaw"
        app:layout_constraintBottom_toTopOf="@id/usernamefield"
        android:id="@+id/logo"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/usernamefield"
            app:layout_constraintStart_toStartOf="@id/usernamefield"
            android:text="@string/username"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/stronggreen"
            android:id="@+id/usernamelabel"

            />
        <EditText
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordlabel"
            android:id="@+id/usernamefield"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_border"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:hint="@string/enter_username"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/usernamefield"
            app:layout_constraintStart_toStartOf="@id/usernamefield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordlabel"
            android:text="@string/password"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/stronggreen"
            android:layout_marginTop="20dp"/>
        <EditText
            app:layout_constraintTop_toBottomOf="@id/passwordlabel"
            android:id="@+id/passwordfield"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            />
    <Button
        android:id="@+id/signInButton"
        android:layout_width="175dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/passwordfield"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newhere"
        android:layout_marginTop="20dp"
        android:background="@color/primarygreen"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsregular"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loginpix"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:id="@+id/newhere">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redirectlogout"
            android:text="New to Numbuddy?"/>
        <TextView
            android:id="@+id/signupredirectclickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupunderlined"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/loginpix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loginubos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>